# avfallsor-homeassistant

./: .env.example  Cargo.toml  README.md
src/: homeassistant.rs  main.rs  pickup.rs  web.rs
