[package]
name = "avfallsor-mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18"
serde = { version = "1.0.190", features = ["derive"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = [] }
serde_json = "1.0.108"
dotenvy = "0.15.7"